--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,7 +55,8 @@ a {
   color: #fff;
   border: none;
 }
-.nav-bar .search-btn:hover, .nav-bar .nav:hover > .nav-link {
+.nav-bar .search-btn:hover,
+.nav-bar .nav:hover > .nav-link {
   background-color: #ccc;
   color: #000;
   cursor: pointer;
@@ -132,16 +133,268 @@ a {
   background-color: #f1f1f1;
 }
 .main .blog-list {
-  background-color: #fff;
-  -webkit-box-flex: 5;
-      -ms-flex: 5;
-          flex: 5;
+  background-color: #f1f1f1;
+  -webkit-box-flex: 7;
+      -ms-flex: 7;
+          flex: 7;
 }
 .main .blog-list .blog {
   padding: 20px;
+  margin-bottom: 15px;
+  background-color: #fff;
+}
+.main .blog-list .blog-title, .main .blog-list .blog-sub-title {
+  margin: 10px 0px;
+  line-height: 36px;
+  text-align: center;
+}
+.main .blog-list .blog-sub-title span {
+  opacity: 0.4;
+}
+.main .blog-list .blog-image {
+  margin-bottom: 30px;
+}
+.main .blog-list .blog-image .image {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.main .blog-list .blog-content {
+  text-align: justify;
+  margin-bottom: 30px;
+}
+.main .blog-list .blog-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 45px;
+  margin-bottom: 20px;
+  border-bottom: #ccc solid 1px;
+}
+.main .blog-list .blog-btn .btn {
+  display: inline-block;
+  font-size: 15px;
+  padding: 8px 16px;
+  border: solid 1px #ccc;
+  font-weight: 700;
+}
+.main .blog-list .blog-btn .like-btn {
+  background-color: #fff;
+  padding: 8px 16px;
+}
+.main .blog-list .blog-btn .like-btn a {
+  color: #000;
+}
+.main .blog-list .blog-btn .like-btn i {
+  width: 20px;
+}
+.main .blog-list .blog-btn .like-btn:hover {
+  background-color: #ccc;
+}
+.main .blog-list .blog-btn .reply-btn {
+  background-color: #000;
+}
+.main .blog-list .blog-btn .reply-btn a {
+  color: #fff;
+}
+.main .blog-list .blog-btn .reply-btn .count {
+  display: inline-block;
+  background-color: #fff;
+  color: #000;
+  padding: 2px 8px;
+  margin-left: 5px;
+  font-weight: normal;
+}
+.main .blog-list .blog-btn .reply-btn:hover {
+  background-color: #ccc;
+}
+.main .blog-list .blog-btn .reply-btn:hover a {
+  color: #000000;
+}
+.main .blog-list .blog .reply {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  margin-bottom: 30px;
+}
+.main .blog-list .blog .reply-setion .reply-image {
+  width: 90px;
+}
+.main .blog-list .blog .reply-setion .reply-image .image {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.main .blog-list .blog .reply-setion .reply-name {
+  font-size: 20px;
+}
+.main .blog-list .blog .reply-setion .reply-name span {
+  opacity: 0.4;
+  font-size: 15px;
+  font-weight: 600;
 }
 .main .blog-menu {
-  -webkit-box-flex: 4;
-      -ms-flex: 4;
-          flex: 4;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+}
+.main .blog-menu .about-card,
+.main .blog-menu .posts-section,
+.main .blog-menu .advertise-section,
+.main .blog-menu .tags-section,
+.main .blog-menu .inspiration-section,
+.main .blog-menu .social-section,
+.main .blog-menu .subcribe-section {
+  margin-bottom: 40px;
+}
+.main .blog-menu .about-card .about-image .image {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+}
+.main .blog-menu .about-content {
+  background-color: #000;
+  color: #fff;
+  padding: 15px;
+}
+.main .blog-menu .about-content h4 {
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.main .blog-menu .heading {
+  background-color: #000;
+  color: #fff;
+  font-size: 20px;
+  padding: 8px 16px;
+}
+.main .blog-menu .posts-section .heading {
+  font-size: 20px;
+  padding: 8px 16px;
+}
+.main .blog-menu .post-list .post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 13px 16px;
+  background-color: #fff;
+  border-bottom: #ccc solid 1px;
+}
+.main .blog-menu .post-list .post:last-child {
+  border: none;
+}
+.main .blog-menu .post-list .post:hover {
+  background-color: #ccc;
+}
+.main .blog-menu .post-list .post-image {
+  width: 50px;
+  margin-right: 16px;
+}
+.main .blog-menu .post-list .post-image .image {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.main .blog-menu .post-list .post-title {
+  font-size: 20px;
+}
+.main .blog-menu .advertise-section .advertise {
+  padding: 13px 16px;
+  background: #fff;
+  height: 200px;
+}
+.main .blog-menu .advertise-section .advertise p {
+  background-color: #f1f1f1;
+  text-align: center;
+  line-height: 170px;
+}
+.main .blog-menu .tags-section {
+  background: #fff;
+}
+.main .blog-menu .tags-section .tags {
+  padding: 13px 16px;
+}
+.main .blog-menu .tags-section .tags .tag {
+  display: inline-block;
+  background: #f1f1f1;
+  margin: 5px 0;
+  padding: 5px;
+}
+.main .blog-menu .tags-section .tags .tag:hover {
+  background: #000;
+}
+.main .blog-menu .tags-section .tags .tag:hover a {
+  color: #fff;
+}
+.main .blog-menu .tags-section .tags .tag a {
+  color: #000;
+  font-size: 12px;
+}
+.main .blog-menu .inspiration-section {
+  background-color: #fff;
+}
+.main .blog-menu .inspiration-section .list-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+  padding: 13px 16px;
+}
+.main .blog-menu .inspiration-section .list-image .insp-img {
+  width: 154px;
+}
+.main .blog-menu .inspiration-section .list-image .insp-img .image {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.main .blog-menu .social-section {
+  background-color: #fff;
+}
+.main .blog-menu .social-section .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 13px 16px;
+  gap: 10px;
+}
+.main .blog-menu .social-section .social-list .social a {
+  color: #000;
+}
+.main .blog-menu .social-section .social-list .social i {
+  font-size: 24px;
+}
+.main .blog-menu .subcribe-section {
+  background-color: #fff;
+}
+.main .blog-menu .subcribe-section .subcribe-info {
+  padding: 13px 16px;
+}
+.main .blog-menu .subcribe-section .subcribe-info input {
+  margin: 16px 0;
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  outline: none;
+  font-size: 15px;
+}
+.main .blog-menu .subcribe-section .subcribe-info button {
+  width: 100%;
+  padding: 8px;
+  border: NONE;
+  background: #f44336;
+  color: #fff;
+  font-size: 15px;
+}
+.main .blog-menu .subcribe-section .subcribe-info button:hover {
+  background-color: #ccc;
+  color: #000;
+  cursor: pointer;
 }
